lustre/tests/sanityn.sh
@@ -2525,6 +2525,13 @@ test_73() {
 }
 run_test 73 "getxattr should not cause xattr lock cancellation"
 
+test_74() {
+	dd if=/dev/zero of=$DIR1/$tfile-1 bs=1K count=1
+	dd if=/dev/zero of=$DIR1/$tfile-2 bs=1K count=1
+	flocks_test 4 $DIR1/$tfile-1 $DIR2/$tfile-2
+}
+run_test 74 "flock deadlock: different mounts =============="
+
 log "cleanup: ======================================================"
 
 [ "$(mount | grep $MOUNT2)" ] && umount $MOUNT2
